# nkn-mon

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SPECIFICATION.md  docker-compose.prod.yml  docker-compose.yml  todo.md
.github/workflows/: build-image.yml
client/: NknMonitor.ps1  README.md
coordinator/: Dockerfile  config.yaml  pyproject.toml
coordinator/src/: classification.py  client_distribution.py  config.py  dns_cache.py  main.py  peers.py  vm.py
coordinator/src/api/: admin.py
coordinator/src/storage/: sqlite.py
docker/s6-overlay/cont-init.d/: 00-prepare-data
docker/s6-overlay/s6-overlay/s6-rc.d/coordinator/: run
docker/s6-overlay/s6-overlay/s6-rc.d/grafana/: run
docker/s6-overlay/s6-overlay/s6-rc.d/victoriametrics/: run
docs/: gdpr.md  unraid-deployment.md
grafana/dashboards/: latency-heatmap.json  overview.json  peer-graph.json  silent-probes.json  site-detail.json  sla-uptime.json  traceroute-graph.json
grafana/provisioning/dashboards/: default.yml
grafana/provisioning/datasources/: coordinator-graph.yml  victoriametrics.yml
mock-client/: Dockerfile  mock_probe.py
scripts/: sync-to-vmworkspace.sh
